Remove usage of List method 'getFirst' which is not available in JDK17.